# viirs

./: CHANGELOG.md  README-template.md  README.md  docker_env  environment.yml  mypy.ini  requirements-dev.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
docker/: Dockerfile
examples/: VNP09H1.A2022097.h11v05.001.2022105085030.json  file-list-full.txt  file-list.txt  vnp09h1-cogs.txt
examples/VNP09A1/: VNP09A1.A2012017.h00v09.001.2016294114238.json  collection.json
examples/VNP09H1/: VNP09H1.A2012017.h00v09.001.2016294114238.json  collection.json
examples/VNP10A1/: VNP10A1.A2022097.h11v05.001.2022098094651.json  collection.json
examples/VNP13A1/: VNP13A1.A2022097.h11v05.001.2022113080900.json  collection.json
examples/VNP14A1/: VNP14A1.A2019054.h11v05.001.2019055201945.json  collection.json
examples/VNP15A2H/: VNP15A2H.A2017137.h11v05.001.2018160084840.json  collection.json
examples/VNP21A1D/: VNP21A1D.A2015343.h11v05.001.2019130023611.json
examples/VNP21A1N/: VNP21A1N.A2014236.h11v05.001.2019100141215.json
examples/VNP21A2/: VNP21A2.A2021153.h11v05.001.2021237090524.json  collection.json
examples/VNP43IA4/: VNP43IA4.A2012364.h11v05.001.2018186051325.json  collection.json
examples/VNP43MA4/: VNP43MA4.A2022140.h11v05.001.2022148093246.json  collection.json
examples/VNP46A2/: VNP46A2.A2022097.h11v05.001.2022105104455.json  collection.json
scripts/: create_examples.py  test
src/stactools/viirs/: __init__.py  cog.py  commands.py  constants.py  fragment.py  (+5 more)
tests/: __init__.py  test_cog.py  test_commands.py  test_module.py  test_stac.py
(+44 files in other folders)
